# Robotica

./: README.md
MotionPlanning/: CMakeLists.txt  package.xml
TaskPlanning/: CMakeLists.txt  package.xml
Vision/: Main.py
docs/: Doxyfile
docs/html/: Kinematic_8h.html  Kinematic_8h__incl.dot  Kinematic_8h__incl.map  Kinematic_8h__incl.md5  Kinematic_8h_source.html  TaskFunction_8h.html  TaskFunction_8h__dep__incl.dot  TaskFunction_8h__incl.dot  TaskFunction_8h_source.html  annotated.html  classdetection_1_1Detection-members.html  classdetection_1_1Detection.html  classdetection_1_1Image-members.html  classdetection_1_1Image.html  classes.html  classmain_1_1Vision-members.html  classmain_1_1Vision.html  classvision__planner_1_1detection_1_1Detection-members.html  classvision__planner_1_1detection_1_1Detection.html  classvision__planner_1_1detection_1_1Image-members.html  classvision__planner_1_1detection_1_1Image.html  classvision__planner_1_1main_1_1Vision-members.html  classvision__planner_1_1main_1_1Vision.html  detection_8py.html  dir_000002_000001.html  dir_000005_000004.html  dir_103bd8faa7e1e94a88e27d199f8e61d2.html  (+42 more)
docs/latex/: Kinematic_8h.tex  (+29 more)
motion_planner/: CMakeLists.txt  package.xml
task_planner/: CMakeLists.txt  TaskInfo.msg  package.xml
task_planner/include/: TaskFunction.h
task_planner/src/: TaskFunction.cpp  add_two_ints_client.cpp  ask_image_gazebo_camera.cpp  ask_inversKinematic.cpp  ask_objectDetection.cpp  control_gazebo_arm.cpp  go_start_position.cpp  state_machine_task.cpp
vision_planner/: CMakeLists.txt  package.xml  setup.py
(+115 files in other folders)
